retouch of color pages
fix color issue

--- a/project001/css/index.css
+++ b/project001/css/index.css
@@ -180,6 +180,267 @@ header{
 	background-color: transparent;
 }
 
+.welcomewebeval{
+	background: #ffffff;
+	color: #425C57;
+	padding: 40px 0;
+}
+
+.welcomewebeval h1{
+	font-size: 40px;
+	margin-top: 0px;
+}
+
+.welcomewebeval p{
+	font-size: 20px;
+}
+
+.webeval h1{
+	font-size: 50px;
+	padding-top: 20px;
+	padding-bottom: 40px;
+}
+
+.webeval h2{
+	font-size: 30px;
+	padding-top: 30px;
+	padding-bottom: 20px;
+}
+
+.webeval p{
+	padding-top: 5px;
+	padding-bottom: 5px;
+	font-size: 18px;
+}
+
+.webeval ul li a{
+	padding-top: 5px;
+	padding-bottom: 5px;
+	font-size: 18px;
+	text-decoration: none;
+	color: #ffffff;
+}
+
+.webeval{
+	background: #425C57;
+	color: #ffffff;
+	padding: 40px 0;
+}
+
+.webevalbox{
+	color: #ffffff;
+	background-color: transparent;
+}
+
+.welcomewebdes{
+	background: #ffffff;
+	color: #6E826D;
+	padding: 40px 0;
+}
+
+.welcomewebdes h1{
+	font-size: 40px;
+	margin-top: 0px;
+}
+
+.welcomewebdes p{
+	font-size: 20px;
+}
+
+.webdes h1{
+	font-size: 50px;
+	padding-top: 20px;
+	padding-bottom: 40px;
+}
+
+.webdes h2{
+	font-size: 30px;
+	padding-top: 30px;
+	padding-bottom: 20px;
+}
+
+.webdes p{
+	padding-top: 5px;
+	padding-bottom: 5px;
+	font-size: 18px;
+}
+
+.webdes ul li a{
+	padding-top: 5px;
+	padding-bottom: 5px;
+	font-size: 18px;
+	text-decoration: none;
+	color: #ffffff;
+}
+
+.webdes{
+	background: #6E826D;
+	color: #ffffff;
+	padding: 40px 0;
+}
+
+.webdesbox{
+	color: #ffffff;
+	background-color: transparent;
+}
+
+.welcomecore{
+	background: #ffffff;
+	color: #5FA7CD;
+	padding: 40px 0;
+}
+
+.welcomecore h1{
+	font-size: 40px;
+	margin-top: 0px;
+}
+
+.welcomecore p{
+	font-size: 20px;
+}
+
+.core h1{
+	font-size: 50px;
+	padding-top: 20px;
+	padding-bottom: 40px;
+}
+
+.core h2{
+	font-size: 30px;
+	padding-top: 30px;
+	padding-bottom: 20px;
+}
+
+.core p{
+	padding-top: 5px;
+	padding-bottom: 5px;
+	font-size: 18px;
+}
+
+.core ul li a{
+	padding-top: 5px;
+	padding-bottom: 5px;
+	font-size: 18px;
+	text-decoration: none;
+	color: #ffffff;
+}
+
+.core{
+	background: #5FA7CD;
+	color: #ffffff;
+	padding: 40px 0;
+}
+
+.corebox{
+	color: #ffffff;
+	background-color: transparent;
+}
+
+.welcomereflect{
+	background: #ffffff;
+	color: #A19C69;
+	padding: 40px 0;
+}
+
+.welcomereflect h1{
+	font-size: 40px;
+	margin-top: 0px;
+}
+
+.welcomereflect p{
+	font-size: 20px;
+}
+
+.reflect h1{
+	font-size: 50px;
+	padding-top: 20px;
+	padding-bottom: 40px;
+}
+
+.reflect h2{
+	font-size: 30px;
+	padding-top: 30px;
+	padding-bottom: 20px;
+}
+
+.reflect p{
+	padding-top: 5px;
+	padding-bottom: 5px;
+	font-size: 18px;
+}
+
+.reflect ul li a{
+	padding-top: 5px;
+	padding-bottom: 5px;
+	font-size: 18px;
+	text-decoration: none;
+	color: #ffffff;
+}
+
+.reflect{
+	background: #A19C69;
+	color: #ffffff;
+	padding: 40px 0;
+}
+
+.reflectbox{
+	color: #ffffff;
+	background-color: transparent;
+}
+
+.welcomeblog{
+	background: #ffffff;
+	color: #008891;
+	padding: 40px 0;
+}
+
+.welcomeblog h1{
+	font-size: 40px;
+	margin-top: 0px;
+}
+
+.welcomeblog p{
+	font-size: 20px;
+}
+
+.blog h1{
+	font-size: 50px;
+	padding-top: 20px;
+	padding-bottom: 40px;
+}
+
+.blog h2{
+	font-size: 30px;
+	padding-top: 30px;
+	padding-bottom: 20px;
+}
+
+.blog p{
+	padding-top: 5px;
+	padding-bottom: 5px;
+	font-size: 18px;
+}
+
+.blog ul li a{
+	padding-top: 5px;
+	padding-bottom: 5px;
+	font-size: 18px;
+	text-decoration: none;
+	color: #ffffff;
+}
+
+.blog{
+	background: #008891;
+	color: #ffffff;
+	padding: 40px 0;
+}
+
+.blogbox{
+	color: #ffffff;
+	background-color: transparent;
+}
+
+
 .story{
 	background: #3498db;
 	color: #ffffff;
